sumo/tests/netconvert/errors/XML/broken_edge/edge#nolanes__false1/errors.netconvert
Error: The lane number is not numeric in edge '1'.
Quitting (on error).
